# PEA-projekt-2

./: App.cpp  App.h  CMakeLists.txt  Helpers.cpp  Helpers.h  Menu.cpp  Menu.h  Model.cpp  Model.h  README.md  main.cpp
algorithms/: Greedy.cpp  Greedy.h  SimAnnealing.cpp  SimAnnealing.h  TabuSearch.cpp  TabuSearch.h
